# onedl-mmdeploy

./: .codespell_ignore.txt  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README-Dev.md  README.md  pyproject.toml  setup.py  shields.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature_request.yaml  config.yml
.github/scripts/: gen_reg_summary.py  test_java_demo.py  test_onnx2ncnn.py
.github/scripts/linux/: test_full_pipeline.sh
.github/scripts/windows/: test_full_pipeline.ps1
.github/workflows/: backend-ascend.yml  backend-coreml.yml  backend-ncnn.yml  backend-ort.yml  backend-pplnn.yml  backend-rknn.yml  backend-snpe.yml  backend-torchscript.yml  build.yml  cross-arch-build.yml  docker.yml  java_api.yml  lint.yml  linux-riscv64-gcc.yml  prebuild.yml  publish.yml  regression-test.yml  rust_api.yml
cmake/: cuda.cmake
cmake/modules/: FindCUDNN.cmake
configs/mmdet/instance-seg/: instance-seg_tensorrt-fp16_dynamic-320x320-1344x1344_rtmdet-ins.py
csrc/mmdeploy/apis/c/: CMakeLists.txt
csrc/mmdeploy/apis/csharp/: README.md
csrc/mmdeploy/apis/cxx/: CMakeLists.txt
csrc/mmdeploy/apis/python/: CMakeLists.txt  segmentor.cpp
csrc/mmdeploy/backend_ops/onnxruntime/: CMakeLists.txt
csrc/mmdeploy/codebase/mmdet/: instance_segmentation.cpp
csrc/mmdeploy/codebase/mmocr/: contour_expand.cpp  dbnet.cpp  pixel_group.cpp
csrc/mmdeploy/core/: registry.h
csrc/mmdeploy/core/mpl/: structure.h
csrc/mmdeploy/execution/: bulk.h  closure.h  concepts.h  dynamic_batch.h  ensure_started.h  execute.h  expand.h  just.h  let_value.h  on.h  run_loop.h  schedule_from.h  split.h  start_detached.h  submit.h  sync_wait.h  tag_invoke.h  then.h  transfer.h  transfer_just.h  type_erased.h  utility.h  when_all.h  when_all_value.h
csrc/mmdeploy/execution/schedulers/: dynamic_batch_scheduler.h  inlined_scheduler.h  intrusive_queue.h  static_thread_pool.h  timed_single_thread_context.h
csrc/mmdeploy/experimental/: module_adapter.h
csrc/mmdeploy/model/: zip_model_impl.cpp
csrc/mmdeploy/net/trt/: trt_net.cpp
csrc/mmdeploy/operation/: managed.h  operation.h
csrc/mmdeploy/preprocess/transform/: normalize.cpp
csrc/mmdeploy/utils/opencv/: opencv_utils.h
demo/tutorials/: tutorials_1.ipynb
docker/Base/: Dockerfile
docker/CPU/: Dockerfile
docker/GPU/: Dockerfile  Dockerfile.jetson60  Dockerfile.jetson61
docker/Release/: Dockerfile
docker/prebuild/: Dockerfile  Dockerfile.cxx11abi
docs/cppapi/: Doxyfile
docs/en/: conf.py  get_started.md  index.rst
docs/en/01-how-to-build/: android.md  build_from_docker.md  build_from_source.md  cross_build_ncnn_aarch64.md  jetsons.md  linux-x86_64.md  macos-arm64.md  riscv.md  rockchip.md  snpe.md  windows.md
docs/en/02-how-to-run/: convert_model.md  fuse_transform.md  prebuilt_package_windows.md  profile_model.md  quantize_model.md  useful_tools.md  write_config.md
docs/en/03-benchmark/: benchmark.md  benchmark_edge.md  benchmark_tvm.md  quantization.md  supported_models.md
docs/en/04-supported-codebases/: mmaction2.md  mmagic.md  mmdet.md  mmocr.md  mmpose.md  mmpretrain.md  mmrotate.md  mmseg.md
docs/en/05-supported-backends/: openvino.md  rknn.md  tensorrt.md
docs/en/07-developer-guide/: partition_model.md  support_new_backend.md  test_rewritten_models.md
docs/en/_static/css/: readthedocs.css
docs/en/appendix/: cross_build_snpe_service.md
mmdeploy/: __init__.py
mmdeploy/apis/: pytorch2onnx.py
mmdeploy/apis/core/: pipeline_manager.py
mmdeploy/backend/ascend/: backend_manager.py  wrapper.py
mmdeploy/backend/base/: backend_manager.py
mmdeploy/backend/coreml/: backend_manager.py  ops.py
mmdeploy/backend/ncnn/: backend_manager.py  wrapper.py
mmdeploy/backend/onnxruntime/: backend_manager.py  init_plugins.py
mmdeploy/backend/openvino/: backend_manager.py  onnx2openvino.py  wrapper.py
mmdeploy/backend/pplnn/: backend_manager.py  onnx2pplnn.py  wrapper.py
mmdeploy/backend/rknn/: backend_manager.py  onnx2rknn.py
mmdeploy/backend/sdk/: backend_manager.py  export_info.py
mmdeploy/backend/snpe/: wrapper.py
mmdeploy/backend/tensorrt/: backend_manager.py  torch_allocator.py  wrapper.py
mmdeploy/backend/torchscript/: backend_manager.py
mmdeploy/backend/tvm/: backend_manager.py
mmdeploy/backend/vacc/: backend_manager.py  wrapper.py
mmdeploy/codebase/base/: mmcodebase.py  task.py
mmdeploy/core/optimizers/: extractor.py
mmdeploy/core/rewriters/: rewriter_utils.py
mmdeploy/mmcv/ops/: modulated_deform_conv.py  nms.py  roi_align.py
mmdeploy/pytorch/functions/: multi_head_attention_forward.py  topk.py
mmdeploy/pytorch/symbolics/: gelu.py  lstm.py
mmdeploy/utils/: __init__.py  config_utils.py  test.py  timer.py
scripts/testing/: test_full_pipeline.sh  test_full_pipeline_deform-detr.sh  test_full_pipeline_faster-rcnn.sh  test_full_pipeline_mask-rcnn.sh  test_full_pipeline_rtmdet-ins.sh  test_full_pipeline_rtmdet.sh
tests/: test_pidnet_trt.py
tests/regression/: mmdet.yml  mmpretrain.yml  mmrotate.yml  mmseg.yml
tests/test_apis/: test_onnx_passes.py  test_torch2onnx.py  test_torch2torchscript.py
tests/test_codebase/test_mmdet/: test_mmdet_models.py
tests/test_codebase/test_mmocr/: test_text_detection.py  test_text_recognition.py
tests/test_codebase/test_mmpretrain/: test_mmpretrain_models.py
tests/test_codebase/test_mmseg/: test_mmseg_models.py  test_segmentation.py
tests/test_csrc/: CMakeLists.txt
tests/test_csrc/preprocess/: test_collect.cpp
tests/test_mmcv/: test_trt_batched_nms.py
tests/test_ops/: test_ops.py  tmpu9pklmdp.onnx
tests/test_pytorch/: test_pytorch_functions.py
tests/test_utils/: test_coerce_bool.py
tools/: deploy.py  onnx2vacc_quant_dataset.py  test.py
tools/package_tools/packaging/: setup.py
tools/scripts/: build_jetson_orin_python38.sh  build_linux_nvidia.sh  build_ubuntu_x64_ncnn.py  build_ubuntu_x64_pplnn.py  ubuntu_cross_build_aarch64.sh  ubuntu_cross_build_rknn.sh  ubuntu_utils.py
(+64 files in other folders)
